use_your_own_API

--- a/ml_materials_task_1_5_correct.ipynb
+++ b/ml_materials_task_1_5_correct.ipynb
@@ -174,7 +174,7 @@
     "pd.options.display.max_columns=500\n",
     "\n",
     "# Используйте ваш API ключ здесь\n",
-    "mp_api_key = 'hadrbcSxkI1k6Dp7NHS09SE3foELS2L5'"
+    "mp_api_key = 'use_your_own_API'"
    ]
   },
   {
