small visual correcting

--- a/ml_materials_task_1_5_correct.ipynb
+++ b/ml_materials_task_1_5_correct.ipynb
@@ -101,19 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hadrbcSxkI1k6Dp7NHS09SE3foELS2L5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(mp_api_key)"
+    "# print(mp_api_key)"
    ]
   },
   {
@@ -7711,73 +7703,6 @@
     "На будущее можно проработать возможности библиотеки Matmaner для OneHot кодирования.\n",
     "\n",
     "**Matminer** — это библиотека Python, специально разработанная для автоматизации процесса извлечения и создания новых признаков для материалов. Она интегрируется с такими библиотеками, как **pymatgen**, и предоставляет удобный интерфейс для генерации большого количества полезных признаков (features) на основе различных данных о материалах, включая информацию о структуре, химическом составе и других свойствах."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " Возможности **Matminer**:\n",
-    "\n",
-    "1. **Извлечение признаков (Feature extraction)**:\n",
-    "   - **Matminer** содержит множество готовых методов для извлечения признаков из материалов, таких как **структурные**, **химические**, **энергетические** и другие.\n",
-    "   - Библиотека поддерживает такие источники данных, как **химическая формула**, **кристаллическая структура**, **поверхности материалов** и **энергетические свойства**.\n",
-    "\n",
-    "2. **Автоматизация создания признаков**:\n",
-    "   - Библиотека автоматизирует процесс генерации признаков, что позволяет легко и быстро создать сотни признаков, не требуя от пользователя глубоких знаний в физике или химии.\n",
-    "   - Признаки можно извлекать как для одиночных элементов, так и для сложных кристаллических структур.\n",
-    "\n",
-    "3. **Интеграция с pymatgen**:\n",
-    "   - **Matminer** хорошо интегрируется с **pymatgen**, поэтому вы можете использовать существующие объекты **Structure** или **Composition** для создания признаков.\n",
-    "\n",
-    "4. **Готовые наборы признаков**:\n",
-    "   - В **matminer** есть несколько наборов признаков (feature sets), которые можно применять к различным типам данных (структуры, составы, энергоемкие данные и т.д.). Эти признаки базируются на известных моделях и эмпирических правилах.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Пример использования **Matminer** для создания новых признаков:\n",
-    "\n",
-    "1. **Извлечение признаков из химического состава**:\n",
-    "\n",
-    "Для работы с химическим составом можно использовать модуль **`Composition`** и извлечь различные химические и физические свойства.\n",
-    "\n",
-    "В этом примере мы использовали несколько готовых featurizers:\n",
-    "- **ElementProperty** — извлекает свойства элементов на основе заранее обученных данных.\n",
-    "- **Stoichiometry** — вычисляет стехиометрические характеристики.\n",
-    "- **ValenceOrbital** — анализирует валентные орбитали элементов.\n",
-    "- **IonProperty** — извлекает свойства, связанные с ионными состояниями.\n",
-    "\n",
-    " 2. **Извлечение признаков из кристаллической структуры**:\n",
-    "\n",
-    "**Matminer** может извлекать множество признаков, связанных с геометрией кристаллической структуры. Например, для анализа симметрии, координационных чисел, плотности и других свойств.\n",
-    "\n",
-    "\n",
-    "Здесь мы использовали несколько featurizers:\n",
-    "- **DensityFeatures** — извлекает признаки, связанные с плотностью структуры (массовая плотность, атомная плотность и т.д.).\n",
-    "- **GlobalSymmetryFeatures** — извлекает признаки, связанные с глобальной симметрией структуры (например, группа симметрии).\n",
-    "- **RadialDistributionFunction** — извлекает признаки, связанные с радиальным распределением атомов.\n",
-    "\n",
-    " 3. **Извлечение признаков из данных энергетики**:\n",
-    "\n",
-    "Вы также можете использовать **matminer** для извлечения признаков на основе энергетических характеристик материала, таких как энергия Гиббса, энергия связи и другие.\n",
-    "\n",
-    " 4. **Извлечение сложных признаков (compound-based)**:\n",
-    "\n",
-    "Matminer также позволяет генерировать более сложные признаки, комбинируя данные о химическом составе и структуре. Это полезно для прогнозирования таких свойств, как термодинамическая стабильность, механические свойства и т.д.\n",
-    "\n",
-    "Основные featurizers в **Matminer**:\n",
-    "\n",
-    "- **`Composition`**: для химических составов (примеры: атомные массы, электроотрицательности, радиусы).\n",
-    "- **`Structure`**: для кристаллических структур (примеры: симметрия, координационные числа, плотность).\n",
-    "- **`Bandstructure`** и **`DOS`**: для энергетических характеристик (примеры: электронные свойства, плотность состояний).\n",
-    "\n",
-    "Преимущества **Matminer**:\n",
-    "- **Автоматизация**: Она существенно упрощает процесс создания признаков для задач материаловедения.\n",
-    "- **Гибкость**: Matminer поддерживает работу с данными разных типов, будь то химические формулы или кристаллические структуры.\n",
-    "- **Интеграция**: Библиотека легко интегрируется с **pymatgen** и другими популярными инструментами для анализа материалов.\n",
-    "\n",
-    " Итог:\n",
-    "**Matminer** — это мощная библиотека для автоматического создания признаков на основе данных о материалах. Она предлагает различные инструменты для извлечения признаков из химических составов, кристаллических структур и других типов данных. Это значительно упрощает работу по созданию моделей машинного обучения для предсказания свойств материалов."
    ]
   },
   {
@@ -22164,15 +22089,6 @@
    ],
    "source": [
     "df_work.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 252,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_features_train.columns.to_list()[3:]"
    ]
   },
   {
